test/corpus/comments.txt
==================
Line comments
==================

-- comment 1

class Main {

-- comment 2

    main() : Int {
        --    comment      3 --
        0
    };

};

-- comment ended by EOF

---

(source_file
    (line_comment)
    (class_definition
        class_type: (type_identifier)
        (line_comment)
        class_feature: (method_definition
            name: (method_identifier)
            param_list: (parameter_list)
            return_type: (builtin_type)
            (line_comment)
            body: (integer_literal)))
    (line_comment))

==================
Block comments
==================

(* comment 1
    *)

class Main {

(* comment 2
    (* comment 3 some
(* comment 4 another level *not correct)
    *)      *)
*)

    main() : Int {
        (* comment 5 inside
            (* comment 6 multi-line comment *)*)
        0
    };

};

---

(source_file
    (block_comment)
    (class_definition
        class_type: (type_identifier)
        (block_comment
            (block_comment
                (block_comment)))
        class_feature: (method_definition
            name: (method_identifier)
            param_list: (parameter_list)
            return_type: (builtin_type)
            (block_comment
                (block_comment))
            body: (integer_literal))))
